// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image.styles ContainerImage should match the snapshot 1`] = `
.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 0;
  overflow: hidden;
  box-sizing: border-box;
}

<div
  class="c0"
/>
`;

exports[`image.styles ImageStyled should match snapshot 1`] = `
.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 0;
  pointer-events: auto;
  cursor: default;
  transform: rotate(0deg);
  box-sizing: border-box;
}

<img
  class="c0"
/>
`;
